--- a/README
+++ b/README
@@ -10,5 +10,5 @@ We spent __10__ hours working together.
 Joseph Nguyen spent __5__ hours driving.
 Joshua Tai spent __5__ hours driving.
 
-Please grade the work submitted by  and not
-the work submitted by 
+Please grade the work submitted by jitai and not
+the work submitted by jnguy243
